# kerb-map

./: .gitignore  AD-Pentest-Methodology.md  Authentication.md  CHANGELOG.md  CONTRIBUTING.md  CVE-Detection.md  DEFENSIVE_IMPROVEMENTS.md  Detection-and-Evasion.md  Extending-kerb-map.md  Flag-Reference.md  Home.md  Installation-and-Setup.md  LICENSE  Module-Reference.md  Output-and-Reporting.md  README.md  RESUME-HERE.md  Real-Lab-Examples.md  Scoring-Engine.md  Tooling-Comparisons.md  kerb-map-manual.docx  kerb-map.py  kerb-map_v1.1_User_Manual.docx  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
docs/: ARCHITECTURE.md  ENGAGEMENT_GUIDE.md  MODULE_AUTHORING.md  kerb-chain-scope-v0.md  v1.2-known-gaps.md
kerb-chain-rs/: Cargo.toml  README.md
kerb-chain-rs/src/: engagement.rs  findings.rs  lib.rs  main.rs  playbook.rs  runner.rs
kerb-chain-rs/tests/: integration.rs
kerb_chain/: __init__.py  cli.py  engagement.py  findings.py  playbook.py  runner.py
kerb_chain/playbooks/: standard.yaml
kerb_map/: __main__.py  acl.py  cli.py  diff.py  ldap_helpers.py  main.py  maintenance.py  plugin.py  resume.py  substitute.py  time_check.py
kerb_map.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kerb_map/auth/: ldap_client.py
kerb_map/db/: cache.py
kerb_map/modules/: adcs_extended.py  asrep_scanner.py  badsuccessor.py  coercion.py  cve_scanner.py  dcsync_rights.py  delegation_mapper.py  enc_auditor.py  gmsa_kds.py  hygiene_auditor.py  ou_computer_create.py  prewin2k.py  scorer.py  shadow_credentials.py  spn_scanner.py  spray.py  tier0_acl.py  timeroast.py  trust_mapper.py  user_acl.py  user_enum.py  user_enumerator.py
kerb_map/modules/cves/: adcs.py  bronze_bit.py  certifried.py  cve_base.py  gpp_passwords.py  ldap_signing.py  nopac.py  printnightmare.py  zerologon.py
kerb_map/output/: bloodhound_ce.py  exporter.py  logger.py  reporter.py
lab/: README.md  Vagrantfile  Vagrantfile.win2022  Vagrantfile.win2022-rodc  Vagrantfile.win2025  provision_dc.sh  scan-and-validate.sh  seed_vulnerabilities.sh
lab/win/: promote_dc.ps1  promote_dc25.ps1  promote_rodc.ps1  seed_vulnerabilities.ps1
tests/: test_adcs_extended.py  test_asrep_scanner.py  test_badsuccessor.py  test_bloodhound_ce.py  test_bloodhound_lite_exporter.py  test_coercion.py  test_csv_markdown_export.py  test_cve_adcs.py  test_cve_filter.py  test_cve_ldap_signing.py  test_cve_ms14_068.py  test_cve_printnightmare.py  test_dcsync_module.py  test_delegation_mapper.py  test_diff.py  test_enc_auditor.py  test_gmsa_kds.py  test_gpp_passwords.py  test_hygiene_auditor.py  test_kerb_chain.py  test_ldap_domain_info.py  test_ldap_helpers.py  test_ldap_paging.py  test_ldap_transport.py  test_list_scans_counts.py  test_logger_levels.py  test_maintenance.py  test_ou_computer_create.py  test_patch_status.py  test_plugin_contract.py  test_prewin2k.py  test_recursive_membership.py  test_resume.py  test_scorer.py  test_secret_hygiene.py  test_shadow_credentials.py  test_spn_scanner.py  test_spray.py  test_substitute.py  test_tier0_acl.py  (+6 more)
