[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kerb-map"
version = "1.0.0"
description = "Active Directory Kerberos Attack Surface Mapper"
requires-python = ">=3.10"
dependencies = ["ldap3", "impacket", "rich"]

[project.scripts]
kerb-map = "kerb_map.main:main"

[tool.setuptools.packages.find]
include = ["kerb_map*"]
