[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kerb-map"
version = "1.1.0"
description = "Active Directory Kerberos Attack Surface Mapper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "b-3llum"}]
keywords = [
    "active-directory", "kerberos", "pentest", "enumeration",
    "red-team", "attack-surface", "ldap", "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "ldap3>=2.9.1",
    "impacket>=0.11.0",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/b-3llum/kerb-map"
Issues = "https://github.com/b-3llum/kerb-map/issues"
Changelog = "https://github.com/b-3llum/kerb-map/blob/main/CHANGELOG.md"

[project.scripts]
kerb-map = "kerb_map.main:main"

[tool.setuptools.packages.find]
include = ["kerb_map*"]
