[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kerb-map"
version = "2.0.0"
description = "Active Directory Kerberos Attack Surface Mapper + chain orchestrator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "b-3llum"}]
keywords = [
    "active-directory", "kerberos", "pentest", "enumeration",
    "red-team", "attack-surface", "ldap", "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "ldap3>=2.9.1",
    "impacket>=0.11.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Repository = "https://github.com/b-3llum/kerb-map"
Issues = "https://github.com/b-3llum/kerb-map/issues"
Changelog = "https://github.com/b-3llum/kerb-map/blob/main/CHANGELOG.md"

[project.scripts]
kerb-map   = "kerb_map.main:main"
kerb-chain = "kerb_chain.cli:main"

[tool.setuptools.packages.find]
include = ["kerb_map*", "kerb_chain*"]

[tool.setuptools.package-data]
kerb_chain = ["playbooks/*.yaml"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["build", "dist", ".kerb-map", "files"]

[tool.ruff.lint]
# E,F = pycodestyle/pyflakes baseline. I = isort. UP = pyupgrade.
# B = flake8-bugbear (catches things like mutable default args).
# Add new rules opportunistically; do not silence in code unless justified.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length is enforced by formatter, not lint
    "E701",   # `if x: pass` style is used intentionally in compact branches
    "UP007",  # Optional[X] reads better than X | None for the LDAP API
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]    # fixtures sometimes look unused / get redefined
